# yaat

./: .commitlintrc.yml  .gitignore  ARCHITECTURE.mmd  CHANGELOG.md  Cargo.toml  DECISIONS.md  DESIGN_DECISIONS.md  MEMORY.md  README.md  ROADMAP.md  lefthook.yml  release-please-config.json  yaat.yaml
.github/workflows/: ci.yml  commitlint.yml  release-please.yml  release.yml
scripts/: apply-dotfiles
src/: cli.rs  config.rs  git.rs  known_configs.rs  main.rs  platform.rs  symlink.rs
src/commands/: add.rs  backup.rs  init.rs  mod.rs  status.rs  sync.rs  update.rs
tests/: integration_tests.rs
