[package]
name = "yaat"
version = "0.1.0"
edition = "2021"
authors = ["Miguel Hernandez <mh@andsoluciones.com>"]
description = "Yet Another Assets Tool - CLI tool for managing configuration files"
license = "MIT"
repository = "https://github.com/mhernandezve/yaat"
keywords = ["dotfiles", "config", "cli", "git", "sync"]
categories = ["command-line-utilities", "config"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive"] }

# Cross-platform directory handling
dirs = "6.0"
hostname = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Git operations
git2 = { version = "0.20", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Symlink handling
symlink = "0.1"

# Directory walking
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
strip = true

# cargo-dist configuration for building and distributing binaries
# See: https://opensource.axo.dev/cargo-dist/
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.28.0"
# CI backends to support
ci = ["github"]
# Target platforms to build for
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
# The archive format for non-windows builds
tar-unix-archive = "tar.gz"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "~/.local/bin/"
# Whether to enable GitHub Attestations
github-attestations = true
# Allow dirty CI configuration (for custom runner versions)
allow-dirty = ["ci"]
# Custom GitHub runners for specific targets
[workspace.metadata.dist.github-custom-runners]
x86_64-unknown-linux-gnu = "ubuntu-22.04"
aarch64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-apple-darwin = "macos-14"
aarch64-apple-darwin = "macos-14"
